<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:digits="@string/abcd123"
        android:hint="@string/please_enter_old_pass"
        android:inputType="textPassword"
        android:maxLength="20"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:textSize="16sp" />

    <EditText
        android:digits="@string/abcd123"
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/please_enter_new_pass"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:digits="@string/abcd123"
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/please_enter_pass_re"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="16sp"
        android:visibility="visible" />
</LinearLayout>