<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="net.suntrans.powerpeace.ui.activity.Login1Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/school_name"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_des"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo_gsu" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="50dp"
                android:layout_above="@+id/guangwang"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:src="@drawable/st_logo" />

            <TextView
                android:id="@+id/guangwang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/name1"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/company_name_CH"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/company_name_EN"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
