<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="net.suntrans.powerpeace.ui.activity.Login1Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="甘肃中医药大学"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="学生公寓用电管理信息化系统"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bu_button"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/wangjimima"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="忘记密码"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/jihuo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="激活账号"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="50dp"
                android:layout_above="@+id/guangwang"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:src="@drawable/st_logo" />

            <TextView
                android:id="@+id/guangwang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/name1"
                android:layout_marginBottom="4dp"
                android:autoLink="all"
                android:gravity="center"
                android:text="@string/company_name_CH"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/company_name_EN"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
