<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarheight"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/item_press_true" />

        <RelativeLayout
            android:id="@+id/nameRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/account"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="--" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#f2f4f5" />

        <RelativeLayout
            android:id="@+id/phoneRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/telephone_number"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="--" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#f2f4f5" />

        <RelativeLayout
            android:id="@+id/xueyuanRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/zhuanye"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/xueyuan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="--" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/item_press_true" />

        <RelativeLayout
            android:id="@+id/mima"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/modify_password"
                android:textColor="@color/textColor" />

            <ImageView
                android:src="@drawable/ic_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="--" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgBlue" />
    </LinearLayout>
</layout>